<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Coffee App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Coffee App</string>
    <string name="nav_header_subtitle">Track your daily coffee journey</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Coffee Counter</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_ad_space">Advertisement</string>
    <string name="menu_video">Video Recording</string>
    
    <!-- Home Fragment -->
    <string name="background_image">Coffee background image</string>
    <string name="today_count_label">Today's Coffee Count</string>
    <string name="yesterday_count_label">Yesterday's Count</string>
    <string name="add_cup_button">Add Cup</string>
    <string name="loading_quote">Loading daily quote…</string>

    <!-- Video Recording Fragment -->
    <string name="video_recording_title">Record Coffee Moments</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="pause_recording">Pause</string>
    <string name="resume_recording">Resume</string>
    <string name="play_video">Play</string>
    <string name="save_video">Save</string>
    <string name="video_saved">Video saved successfully</string>
    <string name="video_save_error">Error saving video</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="audio_permission_required">Microphone permission is required</string>
    <string name="storage_permission_required">Storage permission is required</string>
    <string name="grant_permissions">Grant Permissions</string>
</resources>
