<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_coffee_cup"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_video"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <!-- Ad Space at Bottom -->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_ad_space"
                android:enabled="false"
                android:title="@string/menu_ad_space"
                android:orderInCategory="100"/>
        </menu>
    </item>
</menu>
